CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TBCLOCK)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -ansi")

SET(TERMBOX_LIB_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/termbox/input.c
	${CMAKE_CURRENT_SOURCE_DIR}/termbox/ringbuffer.c
	${CMAKE_CURRENT_SOURCE_DIR}/termbox/term.c
	${CMAKE_CURRENT_SOURCE_DIR}/termbox/termbox.c
	${CMAKE_CURRENT_SOURCE_DIR}/termbox/utf8.c
)

SET(TBCLOCK_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/tbclock.cpp
)

ADD_LIBRARY(termbox STATIC ${TERMBOX_LIB_SRC})
ADD_EXECUTABLE(tbclock ${TBCLOCK_SRC})
TARGET_LINK_LIBRARIES(tbclock termbox)
